--- a/DOCKERFILE-Votebox
+++ b/DOCKERFILE-Votebox
@@ -1,5 +1,9 @@
 FROM python:3.11.14-alpine3.23
-COPY ../vote/* .
+COPY vote/ .
 EXPOSE 8080
+ENV REDIS_HOST=redis 
+ENV REDIS_PORT=6379
+ENV REDIS_DB=0
+ENV REDIS_TIMEOUT=5
 RUN pip install -r requirements.txt
 ENTRYPOINT python app.py
