--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - 6379:6379
     networks:
-      - vote-network
+      - processing-network
   
   postgresql:
     image: 'bitnami/postgresql:latest'
@@ -15,7 +15,7 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
     networks:
-      - vote-network
+      - processing-network
   
   votebox:
     build:
@@ -33,6 +33,7 @@ services:
       - postgresql
     networks:
       - vote-network
+      - processing-network
 
   worker:
     build:
@@ -49,7 +50,7 @@ services:
       - PG_DB=postgres
       - REDIS_HOST=redis
     networks:
-      - vote-network
+      - processing-network
 
   dashboard:
     build:
@@ -61,9 +62,12 @@ services:
       - POSTGRES_HOST=postgresql
     networks:
       - vote-network
+      - processing-network
     depends_on:
       - postgresql
 
 networks:
   vote-network:
+    driver: bridge
+  processing-network:
     driver: bridge
