Don't remember what I did lol

--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -70,6 +70,6 @@ services:
 
 networks:
   vote-network:
-    driver: bridge
+    driver: overlay
   processing-network:
-    driver: bridge
+    driver: overlay
