Eff it, aweful day so time to push to 'prod'

--- a/DOCKERFILE-Dotnet
+++ b/DOCKERFILE-Dotnet
@@ -3,14 +3,22 @@ COPY worker/ .
 EXPOSE 80
 EXPOSE 443
 # Variables d'environnement pour postgres
-ENV PG_HOST=postgresql
-ENV PG_PORT=5432
-ENV PG_USER=postgres
-ENV PG_PASSWORD=postgres
-ENV PG_DB=postgres
+ARG PG_HOST
+ARG PG_PORT
+ARG PG_USER
+ARG PG_PASSWORD
+ARG PG_DB
+
+ARG REDIS_HOST
+
+ENV PG_HOST=${PG_HOST}
+ENV PG_PORT=${PG_PORT}
+ENV PG_USER=${PG_USER}
+ENV PG_PASSWORD=${PG_PASSWORD}
+ENV PG_DB=${PG_DB}
 
 #Pareil pour redis
-ENV REDIS_HOST=redis
+ENV REDIS_HOST=${REDIS_HOST}
 
 # Trying out something that doesn't take eons to compile itself
 # RUN dotnet restore
