--- a/DOCKERFILE-Votebox
+++ b/DOCKERFILE-Votebox
@@ -3,14 +3,15 @@ COPY vote/ .
 EXPOSE 8080
 
 # Accès à Redis
-ENV REDIS_HOST=redis 
-ENV REDIS_PORT=6379
-ENV REDIS_DB=0
-ENV REDIS_TIMEOUT=5
+ARG REDIS_HOST
+ARG REDIS_PORT
+ARG REDIS_DB
+ARG REDIS_TIMEOUT
 
-#Choix des options
-ENV OPTION_A=Cats
-ENV OPTION_B=Dogs
+ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_PORT=${REDIS_PORT}
+ENV REDIS_DB=${REDIS_DB}
+ENV REDIS_TIMEOUT=${REDIS_TIMEOUT}
 
 RUN pip install -r requirements.txt
 ENTRYPOINT python app.py
