--- a/DOCKERFILE-Postgresql
+++ b/DOCKERFILE-Postgresql
@@ -1,6 +1,13 @@
 FROM bitnami/postgresql:latest
 EXPOSE 5432
-ENV POSTGRES_USER=postgres 
-ENV POSTGRES_PASSWORD=postgres
-ENV POSTGRES_DB=postgres
+
+# Configuration avec les variables d'environnement
+ARG POSTGRES_USER
+ARG POSTGRES_PASSWORD
+ARG POSTGRES_DB
+
+ENV POSTGRES_USER=${POSTGRES_USER}
+ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+ENV POSTGRES_DB=${POSTGRES_DB}
+
 VOLUME ["/bitnami/postgresql"]
