--- a/DOCKERFILE-Postgresql
+++ b/DOCKERFILE-Postgresql
@@ -3,11 +3,10 @@ EXPOSE 5432
 
 # Configuration avec les variables d'environnement
 ARG POSTGRES_USER
-ARG POSTGRES_PASSWORD
 ARG POSTGRES_DB
 
 ENV POSTGRES_USER=${POSTGRES_USER}
-ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+ENV POSTGRES_PASSWORD=postgres
 ENV POSTGRES_DB=${POSTGRES_DB}
 
 VOLUME ["/bitnami/postgresql"]
