--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -5,6 +5,12 @@ services:
       - 6379:6379
     networks:
       - processing-network
+    
+    # Deux REDIS, si besoin est
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: any
   
   postgresql:
     image: 'bitnami/postgresql:latest'
@@ -16,11 +22,15 @@ services:
       - POSTGRES_DB=postgres
     networks:
       - processing-network
+
+    # Pareil pour PostgreSQL
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: any
   
   votebox:
-    build:
-      context: .
-      dockerfile: DOCKERFILE-Votebox
+    image: 'camille/voting-votebox:1.0.0'
     ports:
       - 8080:8080
     environment:
@@ -28,17 +38,16 @@ services:
       - REDIS_PORT=6379
       - REDIS_DB=0
       - REDIS_TIMEOUT=5
-    depends_on:
-      - redis
-      - postgresql
     networks:
       - vote-network
       - processing-network
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: any
 
   worker:
-    build:
-      context: .
-      dockerfile: DOCKERFILE-Dotnet
+    image: 'camille/voting-worker:1.0.0'
     ports:
       - 80:80
       - 443:443
@@ -51,13 +60,9 @@ services:
       - REDIS_HOST=redis
     networks:
       - processing-network
-    depends_on:
-      - postgresql
 
   dashboard:
-    build:
-      context: .
-      dockerfile: DOCKERFILE-Statistiques
+    image: 'camille/voting-dashboard:1.0.0'
     ports:
       - "8888:8888"
     environment:
@@ -65,8 +70,10 @@ services:
     networks:
       - vote-network
       - processing-network
-    depends_on:
-      - postgresql
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: any
 
 networks:
   vote-network:
