Impulsive need to make things perfect. May lead to burnout later, but now I'm just happy to have signed up for Distant Worlds 3 in Elite Dangerous, so you can't say anything right now I'm riding that wimsy (˶ˆᗜˆ˵)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
   vote:
     build:
       context: .
-      dockerfile: DOCKERFILE-Votebox
+      dockerfile: DOCKERFILE-vote
 
     ports:
       - 8080:8080
@@ -78,7 +78,7 @@ services:
   worker:
     build:
       context: .
-      dockerfile: DOCKERFILE-Dotnet
+      dockerfile: DOCKERFILE-worker
 
     ports:
       - 80:80
@@ -110,7 +110,7 @@ services:
   result:
     build:
       context: .
-      dockerfile: DOCKERFILE-Statistiques
+      dockerfile: DOCKERFILE-results
 
     ports:
       - "8888:8888"
